--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -9,7 +9,7 @@
   }
   
   .logo {
-    font-size: 2rem;
+    font-size: 1.8rem;
     color: white;
     font-weight: bold;
     cursor: pointer;
@@ -29,14 +29,14 @@
   
   .header a {
     text-decoration: none;
-    font-size: 1.5rem;
+    font-size: 1.15rem;
     color: #bda572;
   }
   
   .header a:hover,
   .header a:active,
   .header a.active {
-    color: white;
+    color: rgb(187, 187, 187);
   }
   
   .badge {
