--- a/src/pages/HomePage.module.css
+++ b/src/pages/HomePage.module.css
@@ -9,3 +9,39 @@
     padding: 0 10%;
     background-image: url('https://cdn.shopify.com/s/files/1/0278/8275/0070/files/image_1080x.jpeg?v=1590255395');
 }
+
+.desktop{
+    box-sizing: border-box;
+    display: inline-block;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: 46px;
+    background: #2E2E2E;
+    color: white;
+    text-decoration: none;
+    font-size: 0.8rem;
+    padding: 0 38px;
+}
+
+.desktop__shipping{
+    display: inline-block;
+    margin-right: 25%;
+}
+
+.desktop__about{
+    display: inline-block;
+}
+
+.desktop__locations{
+    display: inline-block;
+}
+
+.desktop__track{
+    display: inline-block;
+}
+
+.desktop__login{
+    display: inline-block;
+}
