login page added / onClick

--- a/src/components/ui/LoginHeader.module.css
+++ b/src/components/ui/LoginHeader.module.css
@@ -20,16 +20,20 @@
 
 .desktop__about{
     display: inline-block;
+    cursor: pointer;
 }
 
 .desktop__locations{
     display: inline-block;
+    cursor: pointer;
 }
 
 .desktop__track{
     display: inline-block;
+    cursor: pointer;
 }
 
 .desktop__login{
     display: inline-block;
+    cursor: pointer;
 }
