login page progress / top nav now responds 2 hover

--- a/src/components/ui/LoginHeader.module.css
+++ b/src/components/ui/LoginHeader.module.css
@@ -52,3 +52,13 @@
     font-size: 0.8rem;
     padding: 0 1rem;
 }
+
+.desktop__login:hover,
+  .desktop__track:hover{
+    color: rgb(187, 187, 187);
+  }
+
+  .desktop__locations:hover,
+  .desktop__about:hover{
+    color: rgb(187, 187, 187);
+  }
