--- a/src/components/layout/MainNavigation.module.css
+++ b/src/components/layout/MainNavigation.module.css
@@ -4,8 +4,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #6d5238;
+    background-color: #E3E3E3;
     padding: 0 10%;
+    box-shadow: 0px 1px 5px #aaaaaa;
   }
   
   .logo {
@@ -13,6 +14,7 @@
     color: white;
     font-weight: bold;
     cursor: pointer;
+    color: #2E2E2E;
   }
   
   .header ul {
@@ -30,17 +32,17 @@
   .header a {
     text-decoration: none;
     font-size: 1.15rem;
-    color: #bda572;
+    color: #2E2E2E;
   }
   
   .header a:hover,
   .header a:active,
   .header a.active {
-    color: rgb(187, 187, 187);
+    color: rgb(116, 116, 116);
   }
   
   .badge {
-    background-color: #8b6f32;
+    background-color: #555453;
     color: white;
     border-radius: 12px;
     padding: 0 1rem;
