--- a/src/components/ui/LoginHeader.module.css
+++ b/src/components/ui/LoginHeader.module.css
@@ -11,6 +11,7 @@
     text-decoration: none;
     font-size: 0.8rem;
     padding: 0 38px;
+    box-shadow: 10px 10px 8px #888888;
 }
 
 .desktop__shipping{
