--- a/src/components/watches/WatchItem.module.css
+++ b/src/components/watches/WatchItem.module.css
@@ -33,8 +33,8 @@
   .actions button {
     font: inherit;
     cursor: pointer;
-    color: #6d5238;
-    border: 1px solid #6d5238;
+    color: #2E2E2E;
+    border: 1px solid #2E2E2E;
     background-color: transparent;
     padding: 0.5rem 1.5rem;
     border-radius: 4px;
@@ -42,5 +42,5 @@
   
   .actions button:hover,
   .actions button:active {
-    background-color: #ffe2ed;
+    background-color: #dbdbdb;
   }
