--- a/src/components/watches/NewWatchForm.module.css
+++ b/src/components/watches/NewWatchForm.module.css
@@ -30,16 +30,16 @@
   .actions button {
     font: inherit;
     cursor: pointer;
-    background-color: #6d5238;
+    background-color: #2e2e2e;
     color: white;
     padding: 0.5rem 1.5rem;
-    border: 1px solid #6d5238;
+    border: 1px solid #2e2e2e;
     border-radius: 4px;
     font-weight: bold;
   }
   
   .actions button:hover,
   .actions button:active {
-    background-color: #6d5238;
-    border-color: #6d5238;
+    background-color: #2e2e2e;
+    border-color: #2e2e2e;
   }
